taskchampion/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskchampion
  namespace: taskchampion
spec:
  selector:
    app: taskchampion
  ports:
  - port: 80
    targetPort: http
    name: http
