taskchampion/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskchampion
  namespace: taskchampion
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: taskchampion.michaelthomson.dev
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: taskchampion
            port:
              name: http
  tls:
    - hosts:
        - taskchampion.michaelthomson.dev
      secretName: letsencrypt-wildcard-cert-michaelthomson.dev
